# esmerald_movie

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
migrations/versions/: 02e8fdcd7fe0_.py  96c2ddd332e9_.py
requirements/: base.txt
src/: main.py  serve.py  urls.py
src/api/actor/: controllers.py  urls.py
src/api/category/: controllers.py  urls.py
src/api/genre/: controllers.py  urls.py
src/apps/account/: backends.py  permissions.py
src/apps/actor/: dtos.py  repository.py  service.py
src/apps/category/: dtos.py  repository.py  service.py
src/apps/genre/: dtos.py  repository.py  service.py
src/configs/: settings.py
src/configs/development/: settings.py
src/configs/testing/: settings.py
src/directives/operations/: createsuperuser.py
src/middleware/: anonymous_user.py  jwt.py
src/models/: __init__.py  actors.py  base.py  categories.py  genres.py  movies.py  rating.py  review.py  shots.py  user.py
src/tests/: test_app.py
