[tool.poetry]
name = "esmerald-movie-stream"
version = "0.1.0"
description = ""
authors = ["Omelchenko Michael <socanime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
esmerald = "^3.1.2"
edgy = "^0.9.2"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
esmerald-simple-jwt = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
